# distribution-contracts-vara

./: .gitignore  Cargo.toml  README.md  build.rs
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
contracts/: Cargo.toml
contracts/extended-vft/app/src/: lib.rs
contracts/extended-vft/idl_and_client/: extended_vft.idl  extended_vft_client.rs
contracts/factory/: Cargo.toml
contracts/factory/app/: Cargo.toml
contracts/factory/app/src/services/: service.rs
contracts/factory/app/src/states/: state.rs
contracts/factory/app/tests/: test.rs
contracts/factory/src/services/: service.rs
contracts/factory/src/states/: state.rs
contracts/factory/wasm/: app_client.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/app/: Cargo.toml
contracts/hello-world/app/src/: lib.rs
contracts/hello-world/client/: Cargo.toml
contracts/hello-world/tests/: gtest.rs
contracts/interface/: LogicProxyInterface.rs  StorageInterface.rs
contracts/interface/dob/: DistributionPoolInterface.rs  ParticipationTokenInterface.rs  PoolMasterConfigInterface.rs  PoolMasterInterface.rs  TokenSaleMarketInterface.rs
contracts/interface/experiments/ProofOfConcept/: FactoryInterface.rs
contracts/interface/experiments/gasCostEternalStorage/: IExternalLogic.rs  ILocalLogic.rs
contracts/ping_pong_contract/: Cargo.toml
contracts/pool/: Cargo.toml  build.rs
contracts/pool/app/: Cargo.toml
contracts/pool/app/src/: lib.rs  utils.rs
contracts/pool/app/src/services/: vft_manager_service.rs
contracts/pool/app/src/states/: vft_manager_state.rs
contracts/pool/app/tests/: test.rs
contracts/pool/client/: Cargo.toml  build.rs
contracts/pool/client/src/: lib.rs
contracts/pool/src/: lib.rs
contracts/pool/wasm/: build.rs  pool.idl  pool_client.rs
contracts/pool_dob/: Cargo.toml
contracts/pool_dob/app/: Cargo.toml
contracts/pool_dob/app/src/: lib.rs
contracts/pool_dob/wasm/: app.idl  app_client.rs  build.rs
contracts/proxy_logic/: Cargo.toml
contracts/proxy_logic/app/: Cargo.toml
contracts/proxy_logic/app/src/: lib.rs
contracts/proxy_logic/app/src/clients/: mod.rs  pool_dob_client.rs
contracts/proxy_logic/app/src/services/: mod.rs  proxy_pool_dob_caller_service.rs  proxy_service.rs
contracts/proxy_logic/app/src/states/: proxy_state.rs
contracts/tests/: integration_tests.rs
contracts/traffic_light_contract/: Cargo.toml
contracts/traffic_light_contract/wasm/: app_client.rs
contracts/types/: DataType.rs  DepositSource.rs  KeyPrefix.rs  PoolAddresses.rs  PoolType.rs  PoolVariables.rs  StorageType.rs
contracts/vft/: Cargo.toml  README.md  vtf_data.json
contracts/vft/app/: Cargo.toml
contracts/vft/app/src/: lib.rs  utils.rs
contracts/vft/client/: Cargo.toml
contracts/vft/tests/: gtest.rs  test.rs
deploy/: deploy.rs  deploy.sh
new-contracts/: Cargo.toml
new-contracts/pool/: Cargo.toml  README.md
new-contracts/pool/app/: Cargo.toml
new-contracts/pool/app/src/: lib.rs
new-contracts/pool/app/src/services/: vft_manager_service.rs
new-contracts/pool/app/src/states/: vft_manager_state.rs
new-contracts/pool/app/tests/: test.rs
new-contracts/pool/test/: test.rs
new-contracts/pool/wasm/: Cargo.toml  app.idl  app_client.rs
new-contracts/tests/: integration_tests.rs
new-contracts/vft/: Cargo.toml  vtf_data.json
new-contracts/vft/app/src/: lib.rs
new-contracts/vft/app/src/services/extended_vft/: mod.rs
new-contracts/vft/idl_and_client/: extended_vft.idl  extended_vft_client.rs
new-contracts/vft/tests/: test.rs
src/: lib.rs
tests/: Cargo.toml  gtest.rs  vtf_data.json
tests/app/src/services/extended_vft/: mod.rs
tests/idl_and_client/: extended_vft_client.rs
tests/tests/: test.rs
