[workspace]
# Define los miembros del workspace (carpetas/crates)
members = [
    "pool",  # Crate para la lógica del pool
    "vft"    # Crate para la lógica relacionada con tokens o contratos
]

# Opcional: Resolver más estricto para evitar conflictos de dependencias
resolver = "2"

# Configuración común para todos los miembros del workspace
[workspace.package]
version = "0.1.0"    # Versión inicial para todos los crates
edition = "2021"     # Edición de Rust
license = "GPL-3.0"  # Licencia común

# Dependencias compartidas entre los crates (opcional)
[workspace.dependencies]
# Dependenc
