[package]
name = "pool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pool-app = { path = "app" }

[build-dependencies]
pool-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
pool = { path = ".", features = ["wasm-binary"] }
pool-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
gtest.workspace = true
gmeta.workspace = true

[features]
wasm-binary = []
