[workspace]
resolver = "2"
members = ["app", "wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"




[workspace.dependencies]
serde = "1.0.136"  # Alineado con sails-rs y otras dependencias
serde_derive = "1.0.136"
sails-client-gen = "0.7.0"
sails-idl-gen = "0.7.0"
sails-rs = "0.7.0"
gstd = "=1.7.0"
hex-literal = "*"
gmeta = "1.7.0"
scale-info = "2.0"
