[workspace]

members = ["client"]


[package]
name = "vft"
version = "0.1.0"
edition = "2021"

[dependencies]
vft-app = { path = "app" }

[build-dependencies]
vft-app = { path = "app" }
sails-rs = { version = "0.6.3", features = ["wasm-builder"] }
sails-idl-gen = "0.6.3"

[dev-dependencies]
vft = { path = ".", features = ["wasm-binary"] }
vft-client = { path = "client" }
sails-rs = { version = "0.6.3", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
