[workspace]
resolver = "2"

members = [
    "app", "wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "=1.7.0"
sails-client-gen = "=0.7.1"
sails-idl-gen = "=0.7.1"
sails-rs = "=0.7.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "=1.7.0"
gear-core = "=1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
application_builder = { path = "wasm" }
