[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
sails-rs.workspace = true
gstd.workspace = true
hex-literal.workspace = true
scale-info.workspace = true
serde.workspace = true # Incluye serde si se utiliza directamente en el paquete
serde_derive.workspace = true # Para macros derive, si aplica
