[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
sails-rs.workspace = true

[dev-dependencies]
application_builder = { path = "../wasm" }
tokio.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
